# pyvips

./: .buildinfo  .gitignore  .travis.yml  .try1.py.swp  CHANGELOG.rst  LICENSE.txt  README.html  README.md  README.rst  TODO  autogen_methods.html  base.html  enums.html  error.html  genindex.html  gobject.html  gvalue.html  gvalue.py  index.html  install-vips.sh  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  try1.py  vconnection.html  vimage.html  vinterpolate.html  vobject.html  voperation.html  vsource.html  vsourcecustom.html  vtarget.html  vtargetcustom.html
.doctrees/: README.doctree  base.doctree  enums.doctree  environment.pickle  error.doctree  gobject.doctree  gvalue.doctree  index.doctree  intro.doctree  vimage.doctree  vinterpolate.doctree  vobject.doctree  voperation.doctree
.github/workflows/: ci.yml
Vips/: __init__.py  base.py  gobject.py  gvalue.py  image.py  operation.py  vimage.py  vobject.py  voperation.py
_modules/: index.html
_modules/pyvips/: base.html  enums.html  error.html  gobject.html  gvalue.html  vconnection.html  vimage.html  vinterpolate.html  vobject.html  voperation.html  vsource.html  vsourcecustom.html  vtarget.html  vtargetcustom.html
_sources/: README.rst.txt  autogen_methods.rst.txt  base.rst.txt  index.rst.txt  intro.rst.txt  vimage.rst.txt  vinterpolate.rst.txt  vsource.rst.txt  vsourcecustom.rst.txt
_static/: documentation_options.js
doc/: conf.py  enums.rst  error.rst  global.rst  gobject.rst  gvalue.rst  index.rst  intro.rst  vconnection.rst  vimage.rst  vinterpolate.rst  vobject.rst  voperation.rst  vtarget.rst  vtargetcustom.rst  x
doc/_static/: collapse.js  style.css
doc/_templates/: layout.html
doc/reference/: vimage.rst
examples/: affine.py  annotate-animation.py  cod.py  connection.py  convolve.py  enums.py  gen-enums.py  generate_type_stubs.py  join-animation.py  orientation.py  pil-numpy-pyvips.py  progress.py  read_profile.py  shepard.py  soak-test.py  split-animation.py  stdio.py  stream.py  thumb-dir.py  try1.py  try10.py  try11.py  try12.py  try13.py  try14.py  try16.py  try17.py  try2.py  try3.py  try4.py  try5.py  try6.py  try7.py  try8.py  try9.py  watermark.py  watermark_context.py  watermark_image.py  x.v
pyvips/: __init__.py  __init__.pyi  base.py  base.pyi  compile.py  decls.py  enums.py  enums.pyi  error.py  error.pyi  generate_type_stubs.py  gobject.py  gobject.pyi  gvalue.py  gvalue.pyi  pyvips_build.py  vconnection.py  vconnection.pyi  vdecls.py  version.py  vimage.py  vimage.pyi  vinterpolate.py  vinterpolate.pyi  vobject.py  vobject.pyi  voperation.py  voperation.pyi  vregion.py  vregion.pyi  vsource.py  vsource.pyi  vsourcecustom.py  vsourcecustom.pyi  vstream.py  vstreami.py  vstreamiu.py  vstreamo.py  vstreamou.py  vtarget.py  (+3 more)
pyvips/tests/: helpers.py  test_arithmetic.py  test_colour.py  test_conversion.py  test_convolution.py  test_create.py  test_draw.py  test_foreign.py  test_gvalue.py  test_histogram.py  test_iofuncs.py  test_morphology.py  test_resample.py
tests/: helpers.py  test_arithmetic.py  test_block.py  test_colour.py  test_connections.py  test_constants.py  test_conversion.py  test_convolution.py  test_foreign.py  test_gvalue.py  test_histogram.py  test_image.py  test_progress.py  test_resample.py  test_saveload.py  test_signals.py  test_streams.py  test_type_hints.py
tests/helpers/: helpers.py
tests/perf/: .gitignore  README.rst  operation-call.py  run.sh  vips-bench.py
tests/perf/images/: sample2.v
