[metadata]
name = pyvips
version = attr: pyvips.__version__
description = binding for the libvips image processing library
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
url = https://github.com/jcupitt/pyvips
author = John Cupitt
author_email = jcupitt@gmail.com
license = MIT
keywords = image processing
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Multimedia :: Graphics
	Topic :: Multimedia :: Graphics :: Graphics Conversion
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: Implementation :: PyPy
	Programming Language :: Python :: Implementation :: CPython

[options]
# we may try to compile as part of install, so we can't run in a zip
zip_safe = False
packages = find:
setup_requires = 
	cffi >= 1.0.0
	pytest-runner
	pkgconfig
install_requires = 
	cffi >= 1.0.0
	pkgconfig
tests_require =
	cffi >= 1.0.0
	pytest
	pytest-catchlog
	pytest-flake8

[options.packages.find]
exclude =
	docs
	tests
	examples

[options.extras_require]
test = 
	cffi >= 1.0.0
	pytest
	pytest-catchlog
	pytest-flake8
doc = 
	sphinx 
	sphinx_rtd_theme

[aliases]
test=pytest

[bdist_wheel]
universal=1
